dockerImage creation updated